--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container" style="padding: 4px;">
-        <div class="row">
-    <table style="width:100%">
+        <div class="table-responsive">
+    <table class="table" style="width:100%">
        <h3 style="text-align: center;">MONTHLY SAVINGS FOR MUWOYA FAMILY.</h3> 
-        <tr>
+        <tr class="table-secondary">
           <th>Names</th>
           <th>B/F from 2019 to 2020</th>
           <th>January</th>
@@ -380,7 +380,7 @@
           <td></td>
           <td></td>
           </tr>
-          <tr>
+          <tr class="table-success">
             <td>Total</td>
             <td>435,000</td>
             <td></td>
