--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </tr>
         <tr>
           <td>Maria A</td>
-          <td>75,000</td>
-          <td>20,000</td>
+          <td class="table-success">75,000</td>
+          <td class="table-success">20,000</td>
           <td></td>
           <td></td>
           <td></td>
@@ -46,7 +46,7 @@
         </tr>
         <tr>
           <td>Ronnie O</td>
-          <td>25,000</td>
+          <td class="table-success">25,000</td>
           <td></td>
           <td></td>
           <td></td>
@@ -63,7 +63,7 @@
         <tr>
             <td>Imelda N</td>
             <td>n/a</td>
-            <td>20,000</td>
+            <td class="table-success">20,000</td>
             <td></td>
           <td></td>
           <td></td>
@@ -111,7 +111,7 @@
           <tr>
             <td>Aunt Ruth</td>
             <td>n/a</td>
-            <td>20,000</td>
+            <td class="table-success">20,000</td>
             <td></td>
           <td></td>
           <td></td>
@@ -127,7 +127,7 @@
           <tr>
             <td>Aunt Florence</td>
             <td>n/a</td>
-            <td>20,000</td>
+            <td class="table-success">20,000</td>
             <td></td>
           <td></td>
           <td></td>
@@ -158,7 +158,7 @@
           </tr>
           <tr>
             <td>Martin W</td>
-            <td>75,000</td>
+            <td class="table-success">75,000</td>
             <td></td>
             <td></td>
           <td></td>
@@ -174,7 +174,7 @@
           </tr>
           <tr>
             <td>Gerald M</td>
-            <td>50,000</td>
+            <td class="table-success">50,000</td>
             <td></td>
             <td></td>
           <td></td>
@@ -286,8 +286,8 @@
           </tr>
           <tr>
             <td>Brian B</td>
-            <td>75,000</td>
-            <td>20,000</td>
+            <td class="table-success">75,000</td>
+            <td class="table-success">20,000</td>
             <td></td>
           <td></td>
           <td></td>
@@ -302,7 +302,7 @@
           </tr>
           <tr>
             <td>Alvin B</td>
-            <td>50,000</td>
+            <td class="table-success">50,000</td>
             <td></td>
             <td></td>
           <td></td>
@@ -350,7 +350,7 @@
           </tr>
           <tr>
             <td>Mary Clare N</td>
-            <td>75,000</td>
+            <td class="table-success">75,000</td>
             <td></td>
             <td></td>
           <td></td>
@@ -366,7 +366,7 @@
           </tr>
           <tr>
             <td>Lawrence</td>
-            <td>10,000</td>
+            <td class="table-success">10,000</td>
             <td></td>
             <td></td>
           <td></td>
@@ -382,7 +382,7 @@
           </tr>
           <tr class="table-success">
             <td>Total</td>
-            <td>435,000</td>
+            <td class="table-success">435,000</td>
             <td></td>
             <td></td>
           <td></td>
