--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MONTHLY SAVINGS FOR MUWOYA FAMILY.</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MONTHLY SAVINGS FOR MUWOYA FAMILY.</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
-    <div class="container" style="padding: 4px;">
-        <div class="table-responsive">
-    <table class="table" style="width:100%">
-       <h3 style="text-align: center;">MONTHLY SAVINGS FOR MUWOYA FAMILY.</h3> 
+  <div class="container" style="padding: 4px;">
+    <div class="table-responsive">
+      <table class="table" style="width:100%">
+        <h3 style="text-align: center;">MONTHLY SAVINGS FOR MUWOYA FAMILY.</h3>
         <tr class="table-secondary">
           <th>Names</th>
           <th>B/F from 2019 to 2020</th>
@@ -29,9 +31,393 @@
           <th>Dec</th>
         </tr>
         <tr>
+          <td>Aunt Teddy</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Connie</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Zabbu</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Sam</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Micheal</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Eseza</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Sarah</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Silvia</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Uncle Charles</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Martin W</td>
+          <td class="table-success">75,000</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Patricia G</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Henry</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Jackie K</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Alice</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Belinda</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Innocent</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Emma</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Aunt Janet</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Mama Martin</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Aunt Ruth</td>
+          <td>n/a</td>
+          <td class="table-success">20,000</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
           <td>Maria A</td>
           <td class="table-success">75,000</td>
           <td class="table-success">20,000</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Brian B</td>
+          <td class="table-success">75,000</td>
+          <td class="table-success">20,000</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Alvin B</td>
+          <td class="table-success">50,000</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Norah B</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Aunt Imelda K</td>
+          <td>n/a</td>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -61,10 +447,8 @@
           <td></td>
         </tr>
         <tr>
-            <td>Imelda N</td>
-            <td>n/a</td>
-            <td class="table-success">20,000</td>
-            <td></td>
+          <td>Robert O</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
@@ -75,14 +459,12 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Uncle Peter</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Raphael O</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
@@ -91,44 +473,34 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Uncle Charles</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Aunt Petwa</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Aunt Ruth</td>
-            <td>n/a</td>
-            <td class="table-success">20,000</td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Gerald M</td>
+          <td class="table-success">50,000</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Aunt Florence</td>
-            <td>n/a</td>
-            <td class="table-success">20,000</td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -137,14 +509,12 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Tom</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Aunt Imelda K</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -155,12 +525,11 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Martin W</td>
-            <td class="table-success">75,000</td>
-            <td></td>
-            <td></td>
+        </tr>
+        <tr>
+          <td>Aunt Florence</td>
+          <td>n/a</td>
+          <td class="table-success">20,000</td>
           <td></td>
           <td></td>
           <td></td>
@@ -171,13 +540,11 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Gerald M</td>
-            <td class="table-success">50,000</td>
-            <td></td>
-            <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Mary Clare N</td>
+          <td class="table-success">75,000</td>
           <td></td>
           <td></td>
           <td></td>
@@ -187,15 +554,13 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Aunt Petua</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Josephine K</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
@@ -203,28 +568,20 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Raphael O</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Uncle Peter</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Aunt Lorna</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -232,15 +589,13 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Aunt Lorna</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Micheal</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -250,13 +605,12 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Imelda N</td>
+          <td>n/a</td>
+          <td class="table-success">20,000</td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Zabbu</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -267,12 +621,10 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Sam</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
+        </tr>
+        <tr>
+          <td>Lawrence</td>
+          <td class="table-success">10,000</td>
           <td></td>
           <td></td>
           <td></td>
@@ -283,14 +635,12 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Brian B</td>
-            <td class="table-success">75,000</td>
-            <td class="table-success">20,000</td>
-            <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td>Clare Mugala</td>
+          <td>n/a</td>
           <td></td>
           <td></td>
           <td></td>
@@ -299,105 +649,30 @@
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Alvin B</td>
-            <td class="table-success">50,000</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr class="table-success">
+          <td>Total</td>
+          <td class="table-success">435,000</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          </tr>
-          <tr>
-            <td>Patricia G</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          </tr>
-          <tr>
-            <td>Jackie K</td>
-            <td>n/a</td>
-            <td></td>
-            <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          </tr>
-          <tr>
-            <td>Mary Clare N</td>
-            <td class="table-success">75,000</td>
-            <td></td>
-            <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          </tr>
-          <tr>
-            <td>Lawrence</td>
-            <td class="table-success">10,000</td>
-            <td></td>
-            <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          </tr>
-          <tr class="table-success">
-            <td>Total</td>
-            <td class="table-success">435,000</td>
-            <td></td>
-            <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          </tr>
+        </tr>
       </table>
-      </div>
     </div>
+  </div>
 </body>
+
 </html>
