--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <th>Dec</th>
         </tr>
         <tr>
-          <td>Aunt Teddy</td>
+          <td class="table-danger">Aunt Teddy</td>
           <td>n/a</td>
           <td></td>
           <td></td>
@@ -159,7 +159,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Uncle Charles</td>
+          <td class="table-danger">Uncle Charles</td>
           <td>n/a</td>
           <td></td>
           <td></td>
@@ -335,7 +335,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Aunt Ruth</td>
+          <td class="table-danger">Aunt Ruth</td>
           <td>n/a</td>
           <td class="table-success">20,000</td>
           <td></td>
@@ -415,7 +415,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Aunt Imelda K</td>
+          <td class="table-danger">Aunt Imelda K</td>
           <td>n/a</td>
           <td></td>
           <td></td>
@@ -479,7 +479,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Aunt Petwa</td>
+          <td class="table-danger">Aunt Petwa</td>
           <td>n/a</td>
           <td></td>
           <td></td>
@@ -527,7 +527,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Aunt Florence</td>
+          <td class="table-danger">Aunt Florence</td>
           <td>n/a</td>
           <td class="table-success">20,000</td>
           <td></td>
@@ -575,7 +575,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>Uncle Peter</td>
+          <td class="table-danger">Uncle Peter</td>
           <td>n/a</td>
           <td></td>
           <td></td>
