--- a/index.html
+++ b/index.html
@@ -335,6 +335,38 @@
           <td></td>
         </tr>
         <tr>
+          <td class="table-danger">Mama Jude</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Elizabeth</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
           <td class="table-danger">Aunt Ruth</td>
           <td>n/a</td>
           <td class="table-success">20,000</td>
