--- a/index.html
+++ b/index.html
@@ -143,6 +143,22 @@
           <td></td>
         </tr>
         <tr>
+          <td>Joshua</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
           <td>Silvia</td>
           <td>n/a</td>
           <td></td>
