--- a/index.html
+++ b/index.html
@@ -607,6 +607,22 @@
           <td></td>
         </tr>
         <tr>
+          <td>Joel</td>
+          <td>n/a</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
           <td>Josephine K</td>
           <td>n/a</td>
           <td></td>
