--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="table-responsive">
       <table class="table" style="width:100%">
         <h3 style="text-align: center;">MONTHLY SAVINGS FOR MUWOYA FAMILY.</h3>
+        <h5 style="text-align: center;">Current Balance = 814.256 UGX </h5>
         <tr class="table-secondary">
           <th>Names</th>
           <th>B/F from 2019 to 2020</th>
@@ -720,8 +721,8 @@
         </tr>
         <tr class="table-success">
           <td>Total</td>
-          <td class="table-success">435,000</td>
-          <td></td>
+          <td class="table-success">685,000</td>
+          <td class="table-success">100,000</td>
           <td></td>
           <td></td>
           <td></td>
